New spring parent and vm and dto improvment in optional text